/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    java
    `maven-publish`
}

val debugFacket = false

repositories {
    mavenLocal()
    maven {
        url = uri("https://m2.dv8tion.net/releases")
    }

    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }

    maven("https://jitpack.io")
}

dependencies {
    implementation("net.dv8tion:JDA:5.0.0-alpha.12")
    implementation("ws.schild:jave-all-deps:3.3.1")
    implementation("com.sedmelluq:lavaplayer:1.3.78")
    implementation("com.squareup.okhttp3:okhttp:4.9.3")
    implementation("com.google.code.gson:gson:2.9.0")
    implementation("org.reflections:reflections:0.10.2")
    implementation("com.github.psambit9791:jdsp:1.0.0")
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.0-M1")
    compileOnly("org.projectlombok:lombok:1.18.24")
    annotationProcessor("org.projectlombok:lombok:1.18.24")



    implementation(project(":music-common"))
}

allprojects {
    apply<JavaPlugin>()
    repositories {
        mavenLocal()
        maven("https://jitpack.io")
    }
    dependencies {
        if (debugFacket) {
            implementation("me.fan87:facket:1.0.0-SNAPSHOT")
        } else {
            implementation("com.github.RektSky:Facket:2.1.1")
        }
    }
}

group = "me.tropicalfan344"
version = "1.0-SNAPSHOT"
description = "music-bot"
java.sourceCompatibility = JavaVersion.VERSION_1_8

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

tasks {
    register<JavaExec>("run") {
        doFirst {
            File("run/").mkdirs()
        }
        dependsOn("classes")
        mainClass.set("Main")
        workingDir("run/")
        classpath = files(*ArrayList<File>().also {
            it.addAll(project.extensions.getByType(JavaPluginExtension::class.java).sourceSets.getByName(SourceSet.MAIN_SOURCE_SET_NAME).runtimeClasspath)
            it.add(File(project.buildDir, "classes"))
        }.toTypedArray())
    }
    compileJava {
        options.encoding = "UTF-8"
    }
}